--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner " id="slide">              
+            <div class="carousel-inner " id="slide">
+                <!--Data Slide-->
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
                 data-bs-slide="prev">
@@ -163,12 +164,12 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-100 h-100" src="img/car004.png" alt="" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 AboutImg" src="" alt="" style="object-fit: cover;">
                         <div class="position-absolute top-0 start-0 bg-white pe-3 pb-3" style="width: 200px; height: 200px;">
                             <div class="d-flex flex-column justify-content-center text-center bg-primary h-100 p-3">
-                                <h1 class="text-white">5</h1>
-                                <h2 class="text-white">سنوات خبرة</h2>
-                                <h5 class="text-white mb-0">  غسيل وتلميع سيارات</h5>
+                                <h1 class="text-white About_h1"></h1>
+                                <h2 class="text-white About_h2"></h2>
+                                <h5 class="text-white mb-0 About_h5"> </h5>
                             </div>
                         </div>
                     </div>
@@ -179,21 +180,13 @@
                             <h1 lass="text-body text-uppercase mb-2"style="direction: rtl;">من نحن</h1>                           
                             <h2 class="display-6 mb-0" style="direction: rtl;">من نحن</h2>
                         </div>
-                        <h3 style="direction: rtl;">نحن<span style="color: rgb(224, 62, 45);"> <span style="text-decoration: underline;">باب المجال</span></span> شركة سعودية مختصة🚗 فى الخدمات المنزلية بالرياض 💯 بتقديم خدمات متنقلة للعناية بالمركبات&nbsp; على اعلى مستوى🔢 وتتم فيه الإستفادة من خلاصة الدراسات والخبرات الميدانية🚒 المتنوعة في مجال العناية بالمركبات🚗، لتوفير حل عصري يلبي إحتياجات العملاء بطريقة آمنة 💯و سريعة بإستخدام التكنولوجيا الحديثة و بأعلى👍 درجات الجودة.</h3>
-                        <div class="border-top mt-4 pt-4">
-                            <div class="row g-4" dir="ltr">
-                                <div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.1s">
-                                    <i class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"></i>
-                                    <h2 class="mb-0">مغسلة سيارات متنقلة </h2>
-                                </div>                               
-                                <div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.5s">
-                                    <i class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"></i>
-                                    <h2 class="mb-0">تلميع سيارات متنقل</h2>
-                                </div>
-                                <div class="col-sm-4 d-flex wow fadeIn" data-wow-delay="0.3s">
-                                    <i class="fa fa-check fa-2x text-primary flex-shrink-0 me-3"></i>
-                                    <h2 class="mb-0">خدمة 24 ساعة</h2>
-                                </div>
+                        <h3 style="direction: rtl;">نحن<span style="color: rgb(19, 18, 18);">
+                             <span style="text-decoration: underline;" class="details">
+                            
+                            </h3>
+                        <div class="border-top mt-4 pt-4" >
+                            <div class="row g-4" dir="ltr" id="About_sub">
+                              
                             </div>
                         </div>
                     </div>
@@ -490,6 +483,7 @@
     <script src="js/main.js"></script>    
     <script src="js/navsite.js"></script>
     <script src="js/panar.js"></script>
+    <script src="js/dataAbout.js"></script>
 </body>
 
 </html>
